<resources>
    <string name="app_name">FoodProject</string>
    <string name="splash_screen_fragment">Splash Screen</string>
    <string name="main_screen_fragment">Main Screen</string>
    <string name="detail_screen_fragment">Detail Screen</string>
    <string name="profile_screen_fragment">Profile Screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_name">Username</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_address">Address</string>
    <string name="profile_phone_number">Phone number</string>
    <string name="profile_email">Email address</string>
    <string name="profile_list_of_favorite_restaurants">Favorite restaurants</string>

    <string name="restaurant_title">Name of the restaurant</string>
    <string name="restaurant_address">Address of the restaurant</string>
    <string name="restaurant_price">Price</string>
    <string name="restaurant_picture">Picture of the restaurant</string>
    <string name="favorite_icon">Favorite icon</string>

    <string name="city">City</string>
    <string name="phone">Phone number</string>
    <string name="reserve">Reserve</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>