<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreenFragment"
    android:background="@color/colorBackground">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_screen_fragment"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="50dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/ProfileImageImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars[2]"
            android:contentDescription="@string/profile_picture"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="30dp"/>

        <TextView
            android:id="@+id/ProfileNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/ProfileAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_address"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/PhoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_number"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/ProfileEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/ProfileFavoritesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_list_of_favorite_restaurants"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</FrameLayout>