<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="20dp"
    tools:context=".frg.DetailScreenFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/restaurantDetailTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_title"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restaurantDetailImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/restaurant_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailTitleTextView"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/restaurantDetailAddressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/restaurant_address"
        android:textColor="@color/colorAccent"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailImageView" />

    <TextView
        android:id="@+id/restaurantDetailPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/restaurant_price"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailAddressTextView" />

    <TextView
        android:id="@+id/restaurantDetailCityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/city"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailPriceTextView" />

    <TextView
        android:id="@+id/restaurantDetailPhoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/phone"
        android:textColor="@color/colorAccent"
        android:textSize="23sp"
        app:drawableLeftCompat="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailCityTextView" />

    <Button
        android:id="@+id/restaurantDetailReserveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/reserve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantDetailPhoneTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>